--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <img class="head_img" src="assets/header_img.jpg" width="300px">
          
       <h1>Yosemite Park Guide
-      <p>Come explore California’s beautiful wilderness.</p>
-      <p>Always open. Reservations are not available or required to enter the park.</p>
+      <p class="line1">Come explore California’s beautiful wilderness.</p>
+      <p class="line2">Always open. Reservations are not available or required to enter the park.</p>
       </h1>
      </div>
     <h2>
